--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE_URL=https://guest-onboarding-gilt.vercel.app/
+REACT_APP_API_BASE_URL=https://guest-onboarding-gilt.vercel.app
 const apiUrl = `${process.env.REACT_APP_API_BASE_URL}/api/endpoint`;
 fetch(apiUrl)
   .then(response => response.json())
