Updated frontend to connect with deployed backend

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE_URL=https://guest-onboarding-gilt.vercel.app
+REACT_APP_API_BASE_URL=https://guest-onboarding-gilt.vercel.app/
 
 const BASE_URL = process.env.REACT_APP_API_BASE_URL;
 
