--- a/.env
+++ b/.env
@@ -1,28 +1,30 @@
-REACT_APP_API_BASE_URL=https://guest-onboarding-gilt.vercel.app
+# REACT_APP_API_BASE_URL=https://guest-onboarding-gilt.vercel.app
 
-const BASE_URL = process.env.REACT_APP_API_BASE_URL;
+# const BASE_URL = process.env.REACT_APP_API_BASE_URL;
 
-const API_ENDPOINTS = {
-  hotels: `${BASE_URL}/api/hotels`,
-  roles: `${BASE_URL}/api/roles`,
-  guests: `${BASE_URL}/api/guests`,
-};
+# const API_ENDPOINTS = {
+#   hotels: `${BASE_URL}/api/hotels`,
+#   roles: `${BASE_URL}/api/roles`,
+#   guests: `${BASE_URL}/api/guests`,
+# };
 
-const fetchData = async (endpoint) => {
-  try {
-    const response = await fetch(endpoint);
-    if (!response.ok) {
-      throw new Error(`HTTP error! Status: ${response.status}`);
-    }
-    const data = await response.json();
-    console.log(`Data from ${endpoint}:`, data);
-  } catch (error) {
-    console.error(`Error fetching from ${endpoint}:`, error);
-  }
-};
+# const fetchData = async (endpoint) => {
+#   try {
+#     const response = await fetch(endpoint);
+#     if (!response.ok) {
+#       throw new Error(`HTTP error! Status: ${response.status}`);
+#     }
+#     const data = await response.json();
+#     console.log(`Data from ${endpoint}:`, data);
+#   } catch (error) {
+#     console.error(`Error fetching from ${endpoint}:`, error);
+#   }
+# };
 
-// Use the function for specific endpoints
-fetchData(API_ENDPOINTS.hotels); // Fetch Hotels
-fetchData(API_ENDPOINTS.roles);  // Fetch Roles
-fetchData(API_ENDPOINTS.guests); // Fetch Guests
+# // Use the function for specific endpoints
+# fetchData(API_ENDPOINTS.hotels); // Fetch Hotels
+# fetchData(API_ENDPOINTS.roles);  // Fetch Roles
+# fetchData(API_ENDPOINTS.guests); // Fetch Guests
 
+
+REACT_APP_API_BASE_URL=http://localhost:5000
