--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# REACT_APP_API_BASE_URL=https://guest-onboarding-gilt.vercel.app
+REACT_APP_API_BASE_URL=https://guest-onboarding-gilt.vercel.app
 
 # const BASE_URL = process.env.REACT_APP_API_BASE_URL;
 
@@ -27,4 +27,4 @@
 # fetchData(API_ENDPOINTS.guests); // Fetch Guests
 
 
-REACT_APP_API_BASE_URL=http://localhost:5000
+# REACT_APP_API_BASE_URL=http://localhost:5000
